# opportun

./: .gitignore  README.md  ROADMAP.md  eslint.config.mjs  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: API_AND_MCP.md  PRODUCT_EXPLORATION.md
prisma/: schema.prisma  seed.ts
prisma/migrations/20260128095438_add_activity_model/: migration.sql
scripts/: bump-version.sh
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  matching.rs  models.rs  telemetry.rs
src-tauri/src/api/: mod.rs  routes.rs
src-tauri/src/commands/: activities.rs  ai.rs  analytics.rs  backup.rs  dashboard.rs  documents.rs  import.rs  leads.rs  missions.rs  mod.rs  profile.rs  settings.rs  sync.rs  watch_sources.rs
src-tauri/src/llm/: anthropic.rs  embedded.rs  grammars.rs  mod.rs  ollama.rs  openai.rs  prompts.rs  prompts_basic.rs  provider.rs  tier.rs
src-tauri/src/migrations/: 001_initial_schema.sql  002_ai_settings.sql  003_profile_import_fields.sql  004_content_language.sql  005_app_settings.sql  006_ai_provider.sql  007_sync.sql  008_mcp_token.sql  009_watch_sources.sql  010_api_settings.sql  011_discovered_lead_description.sql  012_telemetry.sql  013_watch_source_tls.sql
src-tauri/src/sync/: crypto.rs  mod.rs  pairing.rs  relay.rs  snapshot.rs
src/app/: layout.tsx  page.tsx
src/app/activities/: page.tsx
src/components/: ActivityInsightsCard.tsx  AiQueue.tsx  AiSettingsPanel.tsx  ApiPanel.tsx  Breadcrumbs.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DownloadProgressBar.tsx  ErrorBoundary.tsx  ErrorState.tsx  FileDropZone.tsx  KanbanBoard.tsx  LeadAnalysisCard.tsx  LeadSourceSelect.tsx  LoadingSpinner.tsx  McpPanel.tsx  Navigation.tsx  ResumeDocument.tsx  SyncPanel.tsx  Toast.tsx
src/hooks/: useActivityInsights.ts  useAiAnalysis.ts  useAiParse.ts  useAiSettings.ts  useFileDrop.ts  useImport.ts  useLeadSources.ts  useProfileImport.ts  useResumeGeneration.ts  useSourceChecker.tsx  useStartupAlerts.ts  useSync.ts
src/lib/: auth.ts  matching.ts  wslPath.ts
src/locales/: en.json  fr.json
src/mcp/: server.ts
src/pages/: ActivitiesPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  LeadDetailPage.tsx  LeadsPage.tsx  MissionDetailPage.tsx  MissionsPage.tsx  NewLeadPage.tsx  NewMissionPage.tsx  ProfilePage.tsx  QuickCapturePage.tsx  SettingsPage.tsx  WatchSourcesPage.tsx
src/test/: render.tsx  setup.ts  tauri-mock.ts
src/types/: index.ts
(+25 files in other folders)
