[package]
name = "opportun"
version = "0.2.0"
description = "Freelance Pipeline Manager"
authors = ["Kevin"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
rusqlite = { version = "0.35", features = ["bundled", "backup"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
thiserror = "2"
futures-util = "0.3"
regex = "1"
pdf-extract = "0.10"
chacha20poly1305 = { version = "0.10", optional = true }
zstd = { version = "0.13", optional = true }
base64 = { version = "0.22", optional = true }
qrcode = { version = "0.14", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[dev-dependencies]

[features]
default = []
embedded-llm = []
sync = ["chacha20poly1305", "zstd", "base64", "qrcode", "image"]

[profile.release]
strip = true
lto = true
codegen-units = 1
